[gd_scene load_steps=26 format=3 uid="uid://cvi30bbr5yioe"]

[ext_resource type="PackedScene" uid="uid://dnsgy4jg5dte5" path="res://assets/models/turret/lilturret.glb" id="1_halt4"]
[ext_resource type="Script" path="res://scenes/entities/turret/turret.gd" id="1_l2on8"]
[ext_resource type="Shader" uid="uid://0q2qb8n45nxd" path="res://scenes/entities/turret/turretbase.tres" id="2_ipc2r"]
[ext_resource type="Shader" uid="uid://bdx3eu5e5eyt4" path="res://scenes/entities/turret/turretlights.tres" id="3_kca88"]
[ext_resource type="Shader" uid="uid://ceuvhcckhbnq7" path="res://scenes/entities/turret/iceshadermaybe.tres" id="3_pllyu"]
[ext_resource type="Shader" uid="uid://biahdgukdll45" path="res://scenes/entities/turret/turretcautiontape.tres" id="4_vya68"]
[ext_resource type="Shader" uid="uid://bjavmquxoq2lc" path="res://scenes/entities/turret/turretbarrels.tres" id="5_o5fnb"]
[ext_resource type="Shader" uid="uid://rv0bubh0iai" path="res://scenes/entities/turret/turretlens.tres" id="6_6rwcj"]
[ext_resource type="Shader" uid="uid://c5fvna40nyhpu" path="res://scenes/entities/turret/turretscanninglazer.tres" id="8_f74pd"]
[ext_resource type="PackedScene" uid="uid://copybjxs8bbvn" path="res://scenes/objects/lazer_fire.tscn" id="10_yn1mw"]
[ext_resource type="AudioStream" uid="uid://bmxdoid1bkygt" path="res://assets/sounds/hums/SpaceEngine_ControlRoom_Loop_01.wav" id="11_pt8jd"]
[ext_resource type="AudioStream" uid="uid://l6gn3orro2xn" path="res://assets/sounds/ice/qubodupIceDamage01.wav" id="12_pl6rc"]
[ext_resource type="AudioStream" uid="uid://dkvh6k8wqxria" path="res://assets/sounds/ice/qubodupIceDamage01reversed.wav" id="13_y73lu"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_6fdis"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_tocpd"]
seamless = true
noise = SubResource("FastNoiseLite_6fdis")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ilc5n"]
resource_local_to_scene = true
render_priority = 0
shader = ExtResource("3_pllyu")
shader_parameter/Freeze_Factor = 0.0
shader_parameter/triplanar_scale = Vector3(1, 1, 1)
shader_parameter/triplanar_offset = null
shader_parameter/triplanar_sharpness = 0.5
shader_parameter/IceTriplanar = SubResource("NoiseTexture2D_tocpd")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_c5sd1"]
resource_local_to_scene = true
render_priority = 0
shader = ExtResource("2_ipc2r")
shader_parameter/Freeze_Color_Index = 0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ekrcq"]
resource_local_to_scene = true
render_priority = 0
shader = ExtResource("3_kca88")
shader_parameter/Freeze_Color_Index = 0
shader_parameter/Light_Brightness = 73.245

[sub_resource type="ShaderMaterial" id="ShaderMaterial_l1inl"]
resource_local_to_scene = true
render_priority = 0
shader = ExtResource("4_vya68")
shader_parameter/Freeze_Color_Index = 0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_bby27"]
resource_local_to_scene = true
render_priority = 0
shader = ExtResource("5_o5fnb")
shader_parameter/Freeze_Color_Index = 0
shader_parameter/Barrel_Brightness = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_cm2qc"]
resource_local_to_scene = true
render_priority = 0
shader = ExtResource("6_6rwcj")
shader_parameter/Freeze_Color_Index = 0
shader_parameter/Lens_Brightness = 17.325

[sub_resource type="PrismMesh" id="PrismMesh_s3xph"]
size = Vector3(0.5, 0.5, 0.5)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_s6gb0"]
resource_local_to_scene = true
render_priority = 0
shader = ExtResource("8_f74pd")
shader_parameter/Freeze_Color_Index = 0
shader_parameter/Freeze_Factor = null
shader_parameter/Scanning_Lazer_Brightness = 0.255
shader_parameter/Scanning_Beam_Brightness = 1.0

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_p7egv"]
points = PackedVector3Array(0, 0, 0.25, 0.25, -0.5, 0.25, 0, 0, -0.25, -0.25, -0.5, 0.25, 0.25, -0.5, -0.25, -0.25, -0.5, -0.25)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_cjskq"]
points = PackedVector3Array(0.137511, 0.399841, 0.283383, 0.133403, 0.509246, 0.276492, 0.123976, 0.516622, 0.223311, -0.177182, 0.462882, 0.273108, -0.1784, -0.00183859, -0.174153, 0.173727, 0.000877722, 0.1784, 0.16606, 0.49769, -0.0528374, 0.17775, -0.00540338, -0.17705, -0.152949, 0.508045, -0.0536117, -0.17651, 0.001112, 0.17829, 0.176371, 0.465159, 0.2758, -0.185283, 0.0412307, -0.182883, 0.18235, 0.0412869, -0.182883, -0.126771, 0.516356, 0.223121, 0.0626566, 0.513817, -0.0609434, -0.176963, 0.479756, -0.0524563, -0.140409, 0.399841, 0.283383, 0.17581, 0.48184, -0.0534982, -0.0208167, 0.5224, 0.0115438, -0.161008, 0.498588, 0.274502, 0.132317, 0.516006, -0.0533046, -0.126786, 0.516384, -0.0534667, 0.165833, 0.497387, 0.221858, 0.173353, 0.41776, 0.283383, -0.167326, 0.417704, 0.283383, -0.178596, 0.473006, 0.223048, -0.134989, 0.506959, 0.274289, 0.150492, 0.508779, 0.223926, 0.0178834, 0.5224, 0.0270105, -0.170509, 0.491073, 0.223646, -0.152966, 0.50807, 0.223401, 0.159119, 0.500003, 0.275971)

[node name="Turret" type="Node3D" node_paths=PackedStringArray("ugh", "rig", "lazer_fire_l", "lazer_fire_r") groups=["Freeze Recievers"]]
script = ExtResource("1_l2on8")
tracking_angle = 45.0
ugh = NodePath("lilturret/Turret Rig/Skeleton3D/BoneAttachment3D/ugh")
barrel_rotation = 1769.96
rig = NodePath("lilturret/Turret Rig/Skeleton3D")
fire_rate = 2000.0
whirl_down_speed = 0.5
lazer_fire_l = NodePath("lilturret/Turret Rig/Skeleton3D/BoneAttachment3D/Lazer Fire L")
lazer_fire_r = NodePath("lilturret/Turret Rig/Skeleton3D/BoneAttachment3D/Lazer Fire R")

[node name="lilturret" parent="." instance=ExtResource("1_halt4")]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0)

[node name="Skeleton3D" parent="lilturret/Turret Rig" index="0"]
bones/2/rotation = Quaternion(0, 0, 0, 1)
bones/3/rotation = Quaternion(-0.35334, -0.612496, -0.612496, -0.35334)
bones/4/rotation = Quaternion(-0.66966, -0.227058, -0.227058, -0.66966)

[node name="Turret Model" parent="lilturret/Turret Rig/Skeleton3D" index="0"]
material_overlay = SubResource("ShaderMaterial_ilc5n")
surface_material_override/0 = SubResource("ShaderMaterial_c5sd1")
surface_material_override/1 = SubResource("ShaderMaterial_ekrcq")
surface_material_override/2 = SubResource("ShaderMaterial_l1inl")
surface_material_override/3 = SubResource("ShaderMaterial_bby27")
surface_material_override/4 = SubResource("ShaderMaterial_cm2qc")

[node name="BoneAttachment3D" type="BoneAttachment3D" parent="lilturret/Turret Rig/Skeleton3D" index="1"]
transform = Transform3D(1, 1.85709e-09, -1.85709e-09, -1.85709e-09, 1, 3.44877e-18, 1.85709e-09, 0, 1, 6.20882e-10, 0.459606, -7.75482e-26)
bone_name = "Head"
bone_idx = 2

[node name="ugh" type="Marker3D" parent="lilturret/Turret Rig/Skeleton3D/BoneAttachment3D"]
transform = Transform3D(8.28427, -3.20233e-28, 0, 5.3058e-26, 0.05, 0, 0, 0, 10, -6.20882e-10, 0.0783941, 7.75482e-26)

[node name="MeshInstance3D" type="MeshInstance3D" parent="lilturret/Turret Rig/Skeleton3D/BoneAttachment3D/ugh"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0.25)
mesh = SubResource("PrismMesh_s3xph")
skeleton = NodePath("../../../../../..")
surface_material_override/0 = SubResource("ShaderMaterial_s6gb0")

[node name="Area3D" type="Area3D" parent="lilturret/Turret Rig/Skeleton3D/BoneAttachment3D/ugh/MeshInstance3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 0)

[node name="CollisionShape3D2" type="CollisionShape3D" parent="lilturret/Turret Rig/Skeleton3D/BoneAttachment3D/ugh/MeshInstance3D/Area3D"]
shape = SubResource("ConvexPolygonShape3D_p7egv")

[node name="Lazer Fire L" parent="lilturret/Turret Rig/Skeleton3D/BoneAttachment3D" instance=ExtResource("10_yn1mw")]
transform = Transform3D(1, -3.69095e-18, -2.22045e-16, 0, 1, -2.68825e-06, 2.22045e-16, 2.68825e-06, 1, 0.12785, 0.0407825, 0.283764)

[node name="Lazer Fire R" parent="lilturret/Turret Rig/Skeleton3D/BoneAttachment3D" instance=ExtResource("10_yn1mw")]
transform = Transform3D(1, -3.69095e-18, -2.22045e-16, 0, 1, -2.68825e-06, 2.22045e-16, 2.68825e-06, 1, -0.128, 0.041, 0.284)

[node name="Whirl Sound" type="AudioStreamPlayer3D" parent="lilturret/Turret Rig/Skeleton3D/BoneAttachment3D"]
stream = ExtResource("11_pt8jd")
volume_db = inf_neg
pitch_scale = 0.01
autoplay = true

[node name="StaticBody3D" type="StaticBody3D" parent="lilturret"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="lilturret/StaticBody3D"]
shape = SubResource("ConvexPolygonShape3D_cjskq")

[node name="CSGBox3D" type="CSGBox3D" parent="."]
transform = Transform3D(0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, 0.707107, 0, 0, 0.728004)
visible = false

[node name="Freeze Sound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("12_pl6rc")
max_polyphony = 4

[node name="UnFreeze Sound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("13_y73lu")
max_polyphony = 4

[connection signal="body_entered" from="lilturret/Turret Rig/Skeleton3D/BoneAttachment3D/ugh/MeshInstance3D/Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="lilturret/Turret Rig/Skeleton3D/BoneAttachment3D/ugh/MeshInstance3D/Area3D" to="." method="_on_area_3d_body_exited"]

[editable path="lilturret"]
